--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "lite-server": "^2.3.0"
   },
   "homepage": "https://github.com/cs-geek/front-end-with-bootstrap#readme",
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.12.9"
+  }
 }
