--- a/package.json
+++ b/package.json
@@ -27,15 +27,21 @@
   },
   "devDependencies": {
     "cssmin": "^0.4.3",
+    "grunt": "^1.3.0",
+    "grunt-browser-sync": "^2.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^2.1.0",
     "htmlmin": "0.0.7",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
     "node-sass": "^4.14.1",
     "onchange": "^7.0.2",
     "parallelshell": "^3.0.2",
     "popper.js": "^1.16.1",
     "rimraf": "^2.6.2",
+    "time-grunt": "^1.4.0",
     "uglifyjs": "^2.4.11",
-    "usemin-cli": "^0.5.1"
+    "usemin-cli": "^0.6.0"
   },
   "homepage": "https://github.com/cs-geek/front-end-with-bootstrap#readme",
   "dependencies": {
